# seth

./: .bumpversion.cfg  .gitmodules  Makefile  README.md  pyproject.toml  seth.conf.example
.github/workflows/: ci.yml  release.yml
formulas/: curl.py  emacs.py  gcc.py  gmp.py  gnutls.py  imagemagick.py  libtasn1.py  libxml2.py  mpfr.py  nettle.py  openssl.py  perl.py  pkgconfig.py  wget.py  zlib.py
seth/: builder.py  cellar.py  cli.py  colors.py  config.py  formula.py  linker.py  resolver.py  types.py  updater.py
tests/: conftest.py  test_builder.py  test_cellar.py  test_formula.py  test_linker.py  test_resolver.py
