[project]
name = "seth"
version = "0.2.1"
description = "A source-based package manager for Linux (Osiride platform)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
seth = "seth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seth", "formulas"]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
